# devenv-client-windows

./: .gitignore  LICENSE  README.md  develop.requirements.txt  install_vscode_extensions.py  main.bat  scoop.sh  setup.bat  update.bat
.github/workflows/: ci.yml
roles/consolez/: main.bat
roles/cryptomator/: main.sh
roles/git-bash/: .bash_profile  main.bat
roles/python/: main.bat
roles/scoop/: main.bat
roles/terminus/: config.yaml.j2  generate_config.py  main.bat  pyproject.toml
roles/vscode/: .gitignore  Pipfile  change_user_settings.py  download.py  install_extensions.py  log.py  main.bat  main.sh  pyproject.toml  settings_base.json  vscode_extensions.yml
roles/windows-terminal/: .gitignore  generate.py  log.py  main.bat  main.sh  pyproject.toml  requirements.txt  settings.jsonc.j2
