[tool.poetry]
name = "windows-devenv-roles-vscode"
version = "0.1.0"
description = ""
authors = ["Kamei Shogo <km45@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
