[tool.poetry]
name = "windows-devenv-roles-vscode"
version = "0.1.0"
description = ""
authors = ["Kamei Shogo <km45@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
